--- a/index.html
+++ b/index.html
@@ -192,11 +192,21 @@
     </section>
     <section class="grid-accesorios">
         <div class="content-accesorios">
-            <img class="accesorio-1-p" src="./assets/img/accesorios/gorra levis_p.png" alt="">
-            <img class="accesorio-2-p" src="./assets/img/accesorios/lentes _off _white.png" alt="">
-            <img class="accesorio-3-p" src="./assets/img/accesorios/disel.png" alt="">
-            <img class="accesorio-4-p" src="./assets/img/accesorios/lentes-off-white.png" alt="">
-            <img class="accesorio-5-p" src="./assets/img/accesorios/bolsa-the-nord-face.png" alt="">
+            <a href="./pages/accesorios.html">
+                <img class="accesorio-1-p" src="./assets/img/accesorios/gorra levis_p.png" alt="">
+            </a>
+            <a href="./pages/accesorios.html">
+                <img class="accesorio-2-p" src="./assets/img/accesorios/lentes _off _white.png" alt="">
+            </a>
+            <a href="./pages/accesorios.html">
+                <img class="accesorio-3-p" src="./assets/img/accesorios/disel.png" alt="">
+            </a>
+            <a href="./pages/accesorios.html">
+                <img class="accesorio-4-p" src="./assets/img/accesorios/lentes-off-white.png" alt="">
+            </a>
+            <a href="./pages/accesorios.html">
+                <img class="accesorio-5-p" src="./assets/img/accesorios/bolsa-the-nord-face.png" alt="">
+            </a>
         </div>
     </section>
     <div class="tienda-nike"></div> 
