cambios de precios y diseños de botones

--- a/index.html
+++ b/index.html
@@ -76,9 +76,8 @@
                 <div class="card">
                     <img src="./assets/img/zapatillas/jordan-4-roja.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
-                        <h5 class="card-title">JORDAN 4 RETRO ROJAS</h5>
-                        <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam
-                            dignissimos accusantium amet similique velit iste.</p>
+                        <h5 class="card-title">Air Jordan 4 Retro</h5>
+                        <p class="card-text">Estilo llamativo, herencia icónica. Con materiales premium y un diseño llamativo, el Air Jordan 4 Retro actualiza uno de los estilos más queridos de Jordan.</p>
                     </div>
                     <div class="mb-5 d-flex justify-content-around">
                         <a class="boton" href="./pages/zapatillas.html">
@@ -92,9 +91,10 @@
                 <div class="card">
                     <img src="./assets/img/zapatillas/adidas-forum.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
-                        <h5 class="card-title">ADIDAS FORUM</h5>
-                        <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam
-                            dignissimos accusantium amet similique velit iste.</p>
+                        <h5 class="card-title">Forum Exhibit Low 2</h5>
+                        <p class="card-text">Las ADIDAS Forum son un ícono.
+                            Este par es la siguiente iteración.
+                            Aún reconocible como un clásico atemporal del básquet, estas zapatillas tienen...</p>
                     </div>
                     <div class="mb-5 d-flex justify-content-around">
                         <a class="boton" href="./pages/zapatillas.html">
@@ -108,9 +108,8 @@
                 <div class="card">
                     <img src="./assets/img/zapatillas/dunk-altas.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
-                        <h5 class="card-title">DUNK ALTAS</h5>
-                        <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam
-                            dignissimos accusantium amet similique velit iste.</p>
+                        <h5 class="card-title">Nike Dunk High Retro SE</h5>
+                        <p class="card-text">El ícono del básquetbol de los 80, creado para la cancha y adaptado al estilo urbano, vuelve con cuero impecable y colores retro. El cuello alto acolchado....</p>
                     </div>
                     <div class="mb-5 d-flex justify-content-around">
                         <a class="boton" href="./pages/zapatillas.html">
@@ -124,9 +123,8 @@
                 <div class="card">
                     <img src="./assets/img/zapatillas/nike-air-max-90.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
-                        <h5 class="card-title">NIKE AIR MAX 90</h5>
-                        <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam
-                            dignissimos accusantium amet similique velit iste.</p>
+                        <h5 class="card-title">Nike Air Max 90</h5>
+                        <p class="card-text">Nada más ligero, nada más cómodo, nada más probado: el Nike Air Max 90 se mantiene fiel a sus raíces con la icónica suela tipo waffle....</p>
                     </div>
                     <div class="mb-5 d-flex justify-content-around">
                         <a class="boton" href="./pages/zapatillas.html">
@@ -140,9 +138,8 @@
                 <div class="card">
                     <img src="./assets/img/zapatillas/zapatillas-jorda-1.webp" class="card-img-top" alt="...">
                     <div class="card-body">
-                        <h5 class="card-title">JORDAN 1</h5>
-                        <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam
-                            dignissimos accusantium amet similique velit iste.</p>
+                        <h5 class="card-title">Air Jordan 1 Mid</h5>
+                        <p class="card-text">Inspirada en el AJ1 original, esta edición de corte mid mantiene el look icónico que te encanta, y los colores selectos y el cuero impecable....</p>
                     </div>
                     <div class="mb-5 d-flex justify-content-around">
                         <a class="boton" href="./pages/zapatillas.html">
@@ -156,9 +153,8 @@
                 <div class="card">
                     <img src="./assets/img/zapatillas/zapatillas-nike-correr.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
-                        <h5 class="card-title">NIKE PARA CORRER</h5>
-                        <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam
-                            dignissimos accusantium amet similique velit iste.</p>
+                        <h5 class="card-title">Nike Air Zoom Pegasus 39</h5>
+                        <p class="card-text">Las zapatillas Nike Air Zoom Pegasus 39 están hechas para hacer de tus jornadas de running un ritual diario. Te llevan cada vez más cerca de tu objetivo.</p>
                     </div>
                     <div class="mb-5 d-flex justify-content-around">
                         <a class="boton" href="./pages/zapatillas.html">
