--- a/pages/ropa.html
+++ b/pages/ropa.html
@@ -75,11 +75,11 @@
                     <div class="card">
                         <img src="../assets/img/modelos/foto-campera.jpg" class="" alt="...">
                         <div class="card-body">
-                            <h5 class="card-title">TIRAMISU CAKE</h5>
+                            <h5 class="card-title">Giannis Standard Issue</h5>
                         </div>
                         <div class="mb-5 d-flex justify-content-around">
-                            <h3>190$</h3>
-                            <button class="btn btn-primary">COMPRAR</button>
+                            <h3>$132.999</h3>
+                            <button class="btn btn-danger">COMPRAR</button>
                         </div>
                     </div>
                 </div>
@@ -88,11 +88,11 @@
                     <div class="card">
                         <img src="../assets/img/modelos/buzo-zul-nike.jpg" class="" alt="...">
                         <div class="card-body">
-                            <h5 class="card-title">TIRAMISU CAKE</h5>
+                            <h5 class="card-title">Jordan Essentials</h5>
                         </div>
                         <div class="mb-5 d-flex justify-content-around">
-                            <h3>190$</h3>
-                            <button class="btn btn-primary">COMPRAR</button>
+                            <h3>$144.999</h3>
+                            <button class="btn btn-danger">COMPRAR</button>
                         </div>
                     </div>
                 </div>
@@ -101,11 +101,11 @@
                     <div class="card">
                         <img src="../assets/img/modelos/pantalon-nike-m.jpg" class="" alt="...">
                         <div class="card-body">
-                            <h5 class="card-title">TIRAMISU CAKE</h5>
+                            <h5 class="card-title">Nike Sportswear Club Fleece</h5>
                         </div>
                         <div class="mb-5 d-flex justify-content-around">
-                            <h3>190$</h3>
-                            <button class="btn btn-primary">COMPRAR</button>
+                            <h3>$98.499</h3>
+                            <button class="btn btn-danger">COMPRAR</button>
                         </div>
                     </div>
                 </div>
@@ -114,11 +114,11 @@
                     <div class="card">
                         <img src="../assets/img/modelos/remera-levis.jpg" class="" alt="...">
                         <div class="card-body">
-                            <h5 class="card-title">TIRAMISU CAKE</h5>
+                            <h5 class="card-title">Graphic Set In Neck Levis</h5>
                         </div>
                         <div class="mb-5 d-flex justify-content-around">
-                            <h3>190$</h3>
-                            <button class="btn btn-primary">COMPRAR</button>
+                            <h3>$48.000</h3>
+                            <button class="btn btn-danger">COMPRAR</button>
                         </div>
                     </div>
                 </div>
@@ -127,11 +127,11 @@
                     <div class="card">
                         <img src="../assets/img/modelos/short-adidas.jpg" class="" alt="...">
                         <div class="card-body">
-                            <h5 class="card-title">TIRAMISU CAKE</h5>
+                            <h5 class="card-title">Short Tiro</h5>
                         </div>
                         <div class="mb-5 d-flex justify-content-around">
-                            <h3>190$</h3>
-                            <button class="btn btn-primary">COMPRAR</button>
+                            <h3>$34.299</h3>
+                            <button class="btn btn-danger">COMPRAR</button>
                         </div>
                     </div>
                 </div>
@@ -140,11 +140,11 @@
                     <div class="card">
                         <img src="../assets/img/modelos/buzo-puma.jpg" class="" alt="...">
                         <div class="card-body">
-                            <h5 class="card-title">TIRAMISU CAKE</h5>
+                            <h5 class="card-title">Buzo Puma Team</h5>
                         </div>
                         <div class="mb-5 d-flex justify-content-around">
-                            <h3>190$</h3>
-                            <button class="btn btn-primary">COMPRAR</button>
+                            <h3>$50.999</h3>
+                            <button class="btn btn-danger">COMPRAR</button>
                         </div>
                     </div>
                 </div>
