--- a/pages/zapatillas.html
+++ b/pages/zapatillas.html
@@ -74,11 +74,11 @@
                     <div class="card">
                         <img src="../assets/img/zapatillas/jordan-4-roja.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
-                            <h5 class="card-title">TIRAMISU CAKE</h5>
+                            <h5 class="card-title">Air Jordan 4 Retro</h5>
                         </div>
                         <div class="mb-5 d-flex justify-content-around">
-                            <h3>190$</h3>
-                            <button class="btn btn-primary">COMPRAR</button>
+                            <h3>$359.999</h3>
+                            <button class="btn btn-danger">COMPRAR</button>
                         </div>
                     </div>
                 </div>
@@ -87,11 +87,11 @@
                     <div class="card">
                         <img src="../assets/img/zapatillas/adidas-forum.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
-                            <h5 class="card-title">TIRAMISU CAKE</h5>
+                            <h5 class="card-title">Forum Exhibit Low 2</h5>
                         </div>
                         <div class="mb-5 d-flex justify-content-around">
-                            <h3>190$</h3>
-                            <button class="btn btn-primary">COMPRAR</button>
+                            <h3>$160.999</h3>
+                            <button class="btn btn-danger">COMPRAR</button>
                         </div>
                     </div>
                 </div>
@@ -100,11 +100,11 @@
                     <div class="card">
                         <img src="../assets/img/zapatillas/dunk-altas.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
-                            <h5 class="card-title">TIRAMISU CAKE</h5>
+                            <h5 class="card-title">Nike Dunk High Retro SE</h5>
                         </div>
                         <div class="mb-5 d-flex justify-content-around">
-                            <h3>190$</h3>
-                            <button class="btn btn-primary">COMPRAR</button>
+                            <h3>$207.999</h3>
+                            <button class="btn btn-danger">COMPRAR</button>
                         </div>
                     </div>
                 </div>
@@ -113,11 +113,11 @@
                     <div class="card">
                         <img src="../assets/img/zapatillas/zapatillas-jorda-1.webp" class="card-img-top" alt="...">
                         <div class="card-body">
-                            <h5 class="card-title">TIRAMISU CAKE</h5>
+                            <h5 class="card-title">Air Jordan 1 Mid</h5>
                         </div>
                         <div class="mb-5 d-flex justify-content-around">
-                            <h3>190$</h3>
-                            <button class="btn btn-primary">COMPRAR</button>
+                            <h3>$229.999</h3>
+                            <button class="btn btn-danger">COMPRAR</button>
                         </div>
                     </div>
                 </div>
@@ -126,11 +126,11 @@
                     <div class="card">
                         <img src="../assets/img/zapatillas/zapatillas-nike-correr.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
-                            <h5 class="card-title">TIRAMISU CAKE</h5>
+                            <h5 class="card-title">Nike Air Zoom Pegasus 39</h5>
                         </div>
                         <div class="mb-5 d-flex justify-content-around">
-                            <h3>190$</h3>
-                            <button class="btn btn-primary">COMPRAR</button>
+                            <h3>$209.999</h3>
+                            <button class="btn btn-danger">COMPRAR</button>
                         </div>
                     </div>
                 </div>
@@ -139,11 +139,11 @@
                     <div class="card">
                         <img src="../assets/img/zapatillas/nike-air-max-90.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
-                            <h5 class="card-title">TIRAMISU CAKE</h5>
+                            <h5 class="card-title">Nike Air Max 90</h5>
                         </div>
                         <div class="mb-5 d-flex justify-content-around">
-                            <h3>190$</h3>
-                            <button class="btn btn-primary">COMPRAR</button>
+                            <h3>$239.999</h3>
+                            <button class="btn btn-danger">COMPRAR</button>
                         </div>
                     </div>
                 </div>
