--- a/pages/accesorios.html
+++ b/pages/accesorios.html
@@ -75,11 +75,11 @@
                     <div class="card">
                         <img  src="../assets/img/accesorios-mo/gorra-nike.jpg" class="" alt="...">
                         <div class="card-body">
-                            <h5 class="card-title">TIRAMISU CAKE</h5>
+                            <h5 class="card-title">Gorra Nike Negro</h5>
                         </div>
                         <div class="mb-5 d-flex justify-content-around">
-                            <h3>190$</h3>
-                            <button class="btn btn-primary">COMPRAR</button>
+                            <h3>$38.990</h3>
+                            <button class="btn btn-danger">COMPRAR</button>
                         </div>
                     </div>
                 </div>
@@ -88,11 +88,11 @@
                     <div class="card">
                         <img  src="../assets/img/accesorios-mo/bolso-nike.jpg" class="" alt="...">
                         <div class="card-body">
-                            <h5 class="card-title">TIRAMISU CAKE</h5>
+                            <h5 class="card-title">Nike Academy Team</h5>
                         </div>
                         <div class="mb-5 d-flex justify-content-around">
-                            <h3>190$</h3>
-                            <button class="btn btn-primary">COMPRAR</button>
+                            <h3>$83.999</h3>
+                            <button class="btn btn-danger">COMPRAR</button>
                         </div>
                     </div>
                 </div>
@@ -101,11 +101,11 @@
                     <div class="card">
                         <img  src="../assets/img/accesorios-mo/medias-nike.jpg" class="" alt="...">
                         <div class="card-body">
-                            <h5 class="card-title">TIRAMISU CAKE</h5>
+                            <h5 class="card-title">Nike Sportswear Everyday Essentia</h5>
                         </div>
                         <div class="mb-5 d-flex justify-content-around">
-                            <h3>190$</h3>
-                            <button class="btn btn-primary">COMPRAR</button>
+                            <h3>$22.990</h3>
+                            <button class="btn btn-danger">COMPRAR</button>
                         </div>
                     </div>
                 </div>
@@ -114,11 +114,11 @@
                     <div class="card">
                         <img  src="../assets/img/accesorios-mo/cartera-adidas.jpg" class="" alt="...">
                         <div class="card-body">
-                            <h5 class="card-title">TIRAMISU CAKE</h5>
+                            <h5 class="card-title">adidas Morral ac round</h5>
                         </div>
                         <div class="mb-5 d-flex justify-content-around">
-                            <h3>190$</h3>
-                            <button class="btn btn-primary">COMPRAR</button>
+                            <h3>$35.999</h3>
+                            <button class="btn btn-danger">COMPRAR</button>
                         </div>
                     </div>
                 </div>
@@ -127,11 +127,11 @@
                     <div class="card">
                         <img  src="../assets/img/accesorios-mo/bolsa-puma.jpg" class="" alt="...">
                         <div class="card-body">
-                            <h5 class="card-title">TIRAMISU CAKE</h5>
+                            <h5 class="card-title">Bolso Puma x The Ragged Priest</h5>
                         </div>
                         <div class="mb-5 d-flex justify-content-around">
-                            <h3>190$</h3>
-                            <button class="btn btn-primary">COMPRAR</button>
+                            <h3>$89.499</h3>
+                            <button class="btn btn-danger">COMPRAR</button>
                         </div>
                     </div>
                 </div>
@@ -140,11 +140,11 @@
                     <div class="card">
                         <img  src="../assets/img/accesorios-mo/riño-puma.jpg" class="" alt="...">
                         <div class="card-body">
-                            <h5 class="card-title">TIRAMISU CAKE</h5>
+                            <h5 class="card-title">Minibolso Puma Axis</h5>
                         </div>
                         <div class="mb-5 d-flex justify-content-around">
-                            <h3>190$</h3>
-                            <button class="btn btn-primary">COMPRAR</button>
+                            <h3>$24.599</h3>
+                            <button class="btn btn-danger">COMPRAR</button>
                         </div>
                     </div>
                 </div>
