--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 
     <link rel="stylesheet" href="./css/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
 </head>
 <body>
 <header>
@@ -69,7 +70,7 @@
 </header>
 <main>
     <div class="fondo-inicial"></div>
-    <h2 class="titulo-zapatillas">productos destacados</h2>
+    <h2 class="titulo-zapatillas">Productos Destacados</h2>
     <div class="container py-5">
         <div class="row row-cols-1 row-cols-md-3 g-4 py-5">
             <div class="col">
@@ -212,19 +213,19 @@
         <ul>
             <p>REDES SOCIALES</p>
             <li>
-                <a href="https://www.youtube.com/" target="_blank">youtube</a>
+                <a href="https://www.youtube.com/" target="_blank"><i class="fa-brands fa-youtube"></i></a>
             </li>
             <li>
-                <a href="https://www.instagram.com/" target="_blank">instagram</a>
+                <a href="https://www.instagram.com/" target="_blank"><i class="fa-brands fa-instagram"></i></a>
             </li>
             <li>
-                <a href="https://www.facebook.com/" target="_blank">facebook</a>
+                <a href="https://www.facebook.com/" target="_blank"><i class="fa-brands fa-facebook"></i></a>
             </li>
         </ul>
         <ul>
             <p>AYUDA</p>
             <li>
-                <span>contactenos <a href="./pages/contactos.html">aquí</a></span>
+                <span>contactenos <a href="./pages/contactos.html"><i class="fa-regular fa-id-card"></i></a></span>
             </li>
         </ul>
     </div>
