--- a/pages/contactos.html
+++ b/pages/contactos.html
@@ -16,7 +16,7 @@
         <meta property="og:description" content="podrás encontrar las mejores zapatillas , prendas y accesorios para tus outfit">
         <meta property="og:type" content="website">
         <meta property="og:image" content="https://images.unsplash.com/photo-1626379616459-b2ce1d9decbc?q=80&w=1974&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D">
-    
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
     <title>TriShop - contactos</title>
     <link rel="shortcut icon" href="../assets/img/logo-pagina.png" type="image/x-icon">
 </head>
@@ -76,5 +76,6 @@
         <input class="botons" type="submit" value="register">
         <p><a href="#">¿Ya tengo cuenta?</a></p>
     </section>
+    
 </body>
 </html>
