--- a/pages/zapatillas.html
+++ b/pages/zapatillas.html
@@ -16,7 +16,7 @@
         <meta property="og:description" content="podrás encontrar las mejores zapatillas , prendas y accesorios para tus outfit">
         <meta property="og:type" content="website">
         <meta property="og:image" content="https://images.unsplash.com/photo-1626379616459-b2ce1d9decbc?q=80&w=1974&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D">
-    
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
     <title>TriShop - zapatillas</title>
     <link rel="shortcut icon" href="../assets/img/logo-pagina.png" type="image/x-icon">
 </head>
@@ -67,7 +67,7 @@
             <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
     </header>
     <main>
-        <h2 class="titulo-zapatillas">zapatillas</h2>
+        <h2 class="titulo-zapatillas">Zapatillas</h2>
         <div class="container py-5">
             <div class="row row-cols-1 row-cols-md-3 g-4 py-5">
                 <div class="col">
@@ -156,19 +156,19 @@
             <ul>
                 <p>REDES SOCIALES</p>
                 <li>
-                    <a href="https://www.youtube.com/" target="_blank">youtube</a>
+                    <a href="https://www.youtube.com/" target="_blank"><i class="fa-brands fa-youtube"></i></a>
                 </li>
                 <li>
-                    <a href="https://www.instagram.com/">instagram</a>
+                    <a href="https://www.instagram.com/" target="_blank"><i class="fa-brands fa-instagram"></i></a>
                 </li>
                 <li>
-                    <a href="https://www.facebook.com/">facebook</a>
+                    <a href="https://www.facebook.com/" target="_blank"><i class="fa-brands fa-facebook"></i></a>
                 </li>
             </ul>
             <ul>
                 <p>AYUDA</p>
                 <li>
-                    <span>contactenos <a href="./contactos.html">aquí</a></span>
+                    <span>contactenos <a href="./pages/contactos.html"><i class="fa-regular fa-id-card"></i></a></span>
                 </li>
             </ul>
         </div>
