cambios de contendo en card y flyer

--- a/pages/accesorios.html
+++ b/pages/accesorios.html
@@ -101,7 +101,7 @@
                     <div class="card">
                         <img  src="../assets/img/accesorios-mo/medias-nike.jpg" class="" alt="...">
                         <div class="card-body">
-                            <h5 class="card-title">Nike Sportswear Everyday Essentia</h5>
+                            <h5 class="card-title">Nike Sportswear  Essentia</h5>
                         </div>
                         <div class="mb-5 d-flex justify-content-around">
                             <h3>$22.990</h3>
@@ -127,7 +127,7 @@
                     <div class="card">
                         <img  src="../assets/img/accesorios-mo/bolsa-puma.jpg" class="" alt="...">
                         <div class="card-body">
-                            <h5 class="card-title">Bolso Puma x The Ragged Priest</h5>
+                            <h5 class="card-title">Bolso Puma x The Ragged </h5>
                         </div>
                         <div class="mb-5 d-flex justify-content-around">
                             <h3>$89.499</h3>
@@ -137,13 +137,40 @@
                 </div>
     
                 <div class="col">
+                    <img class="imagen-chica" src="../assets/img/imagen-nike-accesorios.jpg" alt="">
+                </div>
+                <div class="col">
                     <div class="card">
-                        <img  src="../assets/img/accesorios-mo/riño-puma.jpg" class="" alt="...">
+                        <img  src="../assets/img/accesorios-mo/gorra-lev.jpg" class="" alt="...">
                         <div class="card-body">
-                            <h5 class="card-title">Minibolso Puma Axis</h5>
+                            <h5 class="card-title">Curved Structured </h5>
                         </div>
                         <div class="mb-5 d-flex justify-content-around">
-                            <h3>$24.599</h3>
+                            <h3>$ 45.000</h3>
+                            <button class="btn btn-danger">COMPRAR</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card">
+                        <img  src="../assets/img/accesorios-mo/lentes-2.jpg" class="" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Anteojos De Sol Dimaonds</h5>
+                        </div>
+                        <div class="mb-5 d-flex justify-content-around">
+                            <h3>$139.000</h3>
+                            <button class="btn btn-danger">COMPRAR</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card">
+                        <img  src="../assets/img/accesorios-mo/lentes-1.jpg" class="" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Anteojos De Sol Paris</h5>
+                        </div>
+                        <div class="mb-5 d-flex justify-content-around">
+                            <h3>$129.000</h3>
                             <button class="btn btn-danger">COMPRAR</button>
                         </div>
                     </div>
