--- a/pages/ropa.html
+++ b/pages/ropa.html
@@ -135,15 +135,42 @@
                         </div>
                     </div>
                 </div>
-    
+                <div class="col">
+                    <img class="imagen-chica" src="../assets/img/imagen-nike-ropa.jpg" alt="">
+                </div>
+
                 <div class="col">
                     <div class="card">
-                        <img src="../assets/img/modelos/buzo-puma.jpg" class="" alt="...">
+                        <img src="../assets/img/modelos/campera-adidas-muj.jpg" class="" alt="...">
                         <div class="card-body">
-                            <h5 class="card-title">Buzo Puma Team</h5>
+                            <h5 class="card-title">Rompevientos Adidas</h5>
                         </div>
                         <div class="mb-5 d-flex justify-content-around">
-                            <h3>$50.999</h3>
+                            <h3>$109.999</h3>
+                            <button class="btn btn-danger">COMPRAR</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card">
+                        <img src="../assets/img/modelos/pantalon-nike-mujer.jpg" class="" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Nike Sportswear</h5>
+                        </div>
+                        <div class="mb-5 d-flex justify-content-around">
+                            <h3>$100.000</h3>
+                            <button class="btn btn-danger">COMPRAR</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card">
+                        <img src="../assets/img/modelos/buzo-azul-adidas.jpg" class="" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Buzo Con Capucha</h5>
+                        </div>
+                        <div class="mb-5 d-flex justify-content-around">
+                            <h3>$85.999</h3>
                             <button class="btn btn-danger">COMPRAR</button>
                         </div>
                     </div>
