--- a/pages/ropa.html
+++ b/pages/ropa.html
@@ -136,7 +136,7 @@
                     </div>
                 </div>
                 <div class="col">
-                    <img class="imagen-chica" src="../assets/img/imagen-nike-ropa.jpg" alt="">
+                    <img class="imagen-accesorio" src="../assets/img/imagen-nike-ropa.jpg" alt="">
                 </div>
 
                 <div class="col">
