--- a/pages/zapatillas.html
+++ b/pages/zapatillas.html
@@ -136,7 +136,7 @@
                 </div>
                 <div class="col">
                     <div class="card">
-                        <img class="imagen-chica" src="../assets/img/imagen-nike-ropa.jpg" alt="">
+                        <img class="imagen-accesorio" src="../assets/img/imagen-nike-ropa.jpg" alt="">
                     </div>
                 </div>
                 <div class="col">
