--- a/pages/accesorios.html
+++ b/pages/accesorios.html
@@ -135,10 +135,10 @@
                         </div>
                     </div>
                 </div>
-    
                 <div class="col">
-                    <img class="imagen-chica" src="../assets/img/imagen-nike-accesorios.jpg" alt="">
+                    <img class="imagen-accesorio"  src="../assets/img/imagen-nike-accesorios.jpg" class="" alt="...">
                 </div>
+                
                 <div class="col">
                     <div class="card">
                         <img  src="../assets/img/accesorios-mo/gorra-lev.jpg" class="" alt="...">
