cambios de media res

--- a/pages/accesorios.html
+++ b/pages/accesorios.html
@@ -135,9 +135,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col">
-                    <img class="imagen-accesorio"  src="../assets/img/imagen-nike-accesorios.jpg" class="" alt="...">
-                </div>
+                <div class="imagen-accesorio"></div>
                 
                 <div class="col">
                     <div class="card">
