--- a/pages/zapatillas.html
+++ b/pages/zapatillas.html
@@ -134,11 +134,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col">
-                    <div class="card">
-                        <img class="imagen-accesorio" src="../assets/img/imagen-nike-ropa.jpg" alt="">
-                    </div>
-                </div>
+                <div class="imagen-accesorio"></div>
                 <div class="col">
                     <div class="card">
                         <img src="../assets/img/zapatillas/campus-adidas.jpg" class="card-img-top" alt="...">
