--- a/pages/ropa.html
+++ b/pages/ropa.html
@@ -135,10 +135,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col">
-                    <img class="imagen-accesorio" src="../assets/img/imagen-nike-ropa.jpg" alt="">
-                </div>
-
+                <div class="imagen-accesorio"></div>
                 <div class="col">
                     <div class="card">
                         <img src="../assets/img/modelos/campera-adidas-muj.jpg" class="" alt="...">
