--- a/pages/ropa.html
+++ b/pages/ropa.html
@@ -135,7 +135,18 @@
                         </div>
                     </div>
                 </div>
-                <div class="imagen-accesorio"></div>
+                <div class="col">
+                    <div class="card">
+                        <img src="../assets/img/modelos/calza-puma.jpg" class="" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Calza 7/8 Favorite</h5>
+                        </div>
+                        <div class="mb-5 d-flex justify-content-around">
+                            <h3>$54.999</h3>
+                            <button class="btn btn-danger">COMPRAR</button>
+                        </div>
+                    </div>
+                </div>
                 <div class="col">
                     <div class="card">
                         <img src="../assets/img/modelos/campera-adidas-muj.jpg" class="" alt="...">
