--- a/pages/accesorios.html
+++ b/pages/accesorios.html
@@ -135,7 +135,18 @@
                         </div>
                     </div>
                 </div>
-                <div class="imagen-accesorio"></div>
+                <div class="col">
+                    <div class="card">
+                        <img  src="../assets/img/accesorios-mo/cartera-puma.jpg" class="" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Minibolso Hobo Puma </h5>
+                        </div>
+                        <div class="mb-5 d-flex justify-content-around">
+                            <h3>$89.499</h3>
+                            <button class="btn btn-danger">COMPRAR</button>
+                        </div>
+                    </div>
+                </div>
                 
                 <div class="col">
                     <div class="card">
