--- a/pages/accesorios.html
+++ b/pages/accesorios.html
@@ -188,7 +188,7 @@
     
             </div>
         </div>
-        <div class="tienda-nike"></div> 
+        <div class="fondo-nike-2"></div> 
     </main>
     <footer class="pie-pagina">
         <div class="content-items-footer">
