--- a/pages/zapatillas.html
+++ b/pages/zapatillas.html
@@ -180,9 +180,8 @@
                 </div>
             </div>
         </div>
-        
-        
-        <div class="tienda-nike"></div>
+
+        <div class="fondo-adidas"></div>
     </main>
     <footer class="pie-pagina">
         <div class="content-items-footer">
