--- a/pages/ropa.html
+++ b/pages/ropa.html
@@ -187,7 +187,7 @@
     
             </div>
         </div>
-        <div class="tienda-nike"></div> 
+        <div class="fondo-nike"></div> 
     </main>
     <footer class="pie-pagina">
         <div class="content-items-footer">
