--- a/index.html
+++ b/index.html
@@ -53,7 +53,6 @@
                     <li><a class="dropdown-item" href="./pages/accesorios.html">accesorios</a></li>
                 </ul>
                 </li>
-            </ul>
             <form class="d-flex" role="search">
                 <input class="form-control me-2" type="search" placeholder="Buscar" aria-label="Search">
                 <button class="boton-buscar" type="submit">Buscar</button>
@@ -78,7 +77,8 @@
                     <img src="./assets/img/zapatillas/jordan-4-roja.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
                         <h5 class="card-title">Air Jordan 4 Retro</h5>
-                        <p class="card-text">Estilo llamativo, herencia icónica. Con materiales premium y un diseño llamativo, el Air Jordan 4 Retro actualiza uno de los estilos más queridos de Jordan.</p>
+                        <p class="card-text">Estilo llamativo, herencia icónica. Con materiales premium y un diseño llamativo, el Air Jordan 4 Retro actualiza uno de los estilos más queridos de Jordan.</p>
+                        <a href="https://www.nike.com.ar/air-jordan-4-retro-dh6927-161/p?idsku=64759&gad_source=1&gclid=CjwKCAjwxLKxBhA7EiwAXO0R0HbwkTZT4Q9WP0_Q_7a-rSCy1Sge38590fd2DxkQWAaV6KUX1b5oSBoC5bAQAvD_BwE" target="_blank" class="leer-mas">Más información</a>
                     </div>
                     <div class="mb-5 d-flex justify-content-around">
                         <a class="boton" href="./pages/zapatillas.html">
@@ -90,12 +90,11 @@
 
             <div class="col">
                 <div class="card">
-                    <img src="./assets/img/zapatillas/adidas-forum.jpg" class="card-img-top" alt="...">
+                    <img src="./assets/img/zapatillas/vans-knu.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
-                        <h5 class="card-title">Forum Exhibit Low 2</h5>
-                        <p class="card-text">Las ADIDAS Forum son un ícono.
-                            Este par es la siguiente iteración.
-                            Aún reconocible como un clásico atemporal del básquet, estas zapatillas tienen...</p>
+                        <h5 class="card-title">Vans Knu Skool</h5>
+                        <p class="card-text">La Knu Skool es un modelo reeditado de los años 90, cuando las zapatillas de skate eran extra hinchadas.Manteniendo la estética "Off The Wall"</p>
+                        <a href="https://www.vans.com.ar/Product/Detail/VN000CRPOLV/U_Knu_Skool/Zapatillas-Verde-Vans/?historico=false&medida=undefined&conStock=true&anterior=true" target="_blank" class="leer-mas">Más información</a>
                     </div>
                     <div class="mb-5 d-flex justify-content-around">
                         <a class="boton" href="./pages/zapatillas.html">
@@ -111,6 +110,7 @@
                     <div class="card-body">
                         <h5 class="card-title">Nike Dunk High Retro SE</h5>
                         <p class="card-text">El ícono del básquetbol de los 80, creado para la cancha y adaptado al estilo urbano, vuelve con cuero impecable y colores retro. El cuello alto acolchado....</p>
+                        <a href="https://www.nike.com.ar/nike-dunk-high-retro-se-dz2535-100/p" target="_blank" class="leer-mas">Más información</a>
                     </div>
                     <div class="mb-5 d-flex justify-content-around">
                         <a class="boton" href="./pages/zapatillas.html">
@@ -126,6 +126,7 @@
                     <div class="card-body">
                         <h5 class="card-title">Nike Air Max 90</h5>
                         <p class="card-text">Nada más ligero, nada más cómodo, nada más probado: el Nike Air Max 90 se mantiene fiel a sus raíces con la icónica suela tipo waffle....</p>
+                        <a href="https://www.nike.com.ar/nike-air-max-90-dh8010-002/p?idsku=70857&gad_source=1&gclid=CjwKCAjwxLKxBhA7EiwAXO0R0AECbJW7_jwHkxBMSGMxkXQnwvcMNydbmsO4NXLz8-THIloK356zrhoCwBwQAvD_BwE" target="_blank" class="leer-mas">Más información</a>
                     </div>
                     <div class="mb-5 d-flex justify-content-around">
                         <a class="boton" href="./pages/zapatillas.html">
@@ -141,6 +142,7 @@
                     <div class="card-body">
                         <h5 class="card-title">Air Jordan 1 Mid</h5>
                         <p class="card-text">Inspirada en el AJ1 original, esta edición de corte mid mantiene el look icónico que te encanta, y los colores selectos y el cuero impecable....</p>
+                        <a href="https://www.nike.com.ar/air-jordan-1-mid-dq8426-106/p?idsku=65234&gad_source=1&gclid=CjwKCAjwxLKxBhA7EiwAXO0R0BGrv3TI6pa08byh5HOpvl24KSS8sMXgnUd-7DiIKN-XpNBHrkXWcxoCRQ8QAvD_BwE" target="_blank" class="leer-mas">Más información</a>
                     </div>
                     <div class="mb-5 d-flex justify-content-around">
                         <a class="boton" href="./pages/zapatillas.html">
@@ -152,10 +154,11 @@
 
             <div class="col">
                 <div class="card">
-                    <img src="./assets/img/zapatillas/zapatillas-nike-correr.jpg" class="card-img-top" alt="...">
+                    <img src="./assets/img/zapatillas/pumas-palermo.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
-                        <h5 class="card-title">Nike Air Zoom Pegasus 39</h5>
-                        <p class="card-text">Las zapatillas Nike Air Zoom Pegasus 39 están hechas para hacer de tus jornadas de running un ritual diario. Te llevan cada vez más cerca de tu objetivo.</p>
+                        <h5 class="card-title">Zapatillas Palermo FC</h5>
+                        <p class="card-text">Las Palermo. Este modelo debutó a principios de los años 80 y pronto se convirtió en un básico en las gradas de los estadios de fútbol británicos...</p>
+                        <a href="https://ar.puma.com/zapatillas-palermo-fc-unisex-396463-02.html?color=13632&utm_source=GGL&utm_medium=PMAX&gad_source=1&gclid=CjwKCAjwxLKxBhA7EiwAXO0R0M74y9b-4HpnMZbbCrcgHeJhzYoUFGcLe_-ZKUVn03f194scOoe0XxoC8VYQAvD_BwE" target="_blank" class="leer-mas">Más información</a>
                     </div>
                     <div class="mb-5 d-flex justify-content-around">
                         <a class="boton" href="./pages/zapatillas.html">
@@ -213,19 +216,27 @@
         <ul>
             <p>REDES SOCIALES</p>
             <li>
-                <a href="https://www.youtube.com/" target="_blank"><i class="fa-brands fa-youtube"></i></a>
+                <a href="https://www.youtube.com/" target="_blank">
+                    <img src="./assets/img/icon/youtube.png" alt="">
+                </a>
             </li>
             <li>
-                <a href="https://www.instagram.com/" target="_blank"><i class="fa-brands fa-instagram"></i></a>
+                <a href="https://www.instagram.com/" target="_blank">
+                    <img src="./assets/img/icon/instagram.png" alt="">
+                </a>
             </li>
             <li>
-                <a href="https://www.facebook.com/" target="_blank"><i class="fa-brands fa-facebook"></i></a>
+                <a href="https://www.facebook.com/" target="_blank">
+                    <img src="./assets/img/icon/facebook.png" alt="">
+                </a>
             </li>
         </ul>
         <ul>
             <p>AYUDA</p>
             <li>
-                <span>contactenos <a href="./pages/contactos.html"><i class="fa-regular fa-id-card"></i></a></span>
+                <span>Contactenos <a href="./pages/contactos.html" target="_blank">
+                    <img src="./assets/img/icon/ayuda.png" alt="">
+                </a>
             </li>
         </ul>
     </div>
