--- a/pages/zapatillas.html
+++ b/pages/zapatillas.html
@@ -181,26 +181,34 @@
             </div>
         </div>
 
-        <div class="fondo-adidas"></div>
+        <div class="fondo-nike"></div>
     </main>
     <footer class="pie-pagina">
         <div class="content-items-footer">
             <ul>
                 <p>REDES SOCIALES</p>
                 <li>
-                    <a href="https://www.youtube.com/" target="_blank"><i class="fa-brands fa-youtube"></i></a>
+                    <a href="https://www.youtube.com/">
+                        <img src="../assets/img/icon/youtube.png" alt="">
+                    </a>
                 </li>
                 <li>
-                    <a href="https://www.instagram.com/" target="_blank"><i class="fa-brands fa-instagram"></i></a>
+                    <a href="https://www.instagram.com/">
+                        <img src="../assets/img/icon/instagram.png" alt="">
+                    </a>
                 </li>
                 <li>
-                    <a href="https://www.facebook.com/" target="_blank"><i class="fa-brands fa-facebook"></i></a>
+                    <a href="https://www.facebook.com/">
+                        <img src="../assets/img/icon/facebook.png" alt="">
+                    </a>
                 </li>
             </ul>
             <ul>
                 <p>AYUDA</p>
                 <li>
-                    <span>contactenos <a href="./pages/contactos.html"><i class="fa-regular fa-id-card"></i></a></span>
+                    <span>Contactenos <a href="../pages/contactos.html">
+                        <img src="../assets/img/icon/ayuda.png" alt="">
+                    </a>
                 </li>
             </ul>
         </div>
