--- a/pages/zapatillas.html
+++ b/pages/zapatillas.html
@@ -181,6 +181,7 @@
             </div>
         </div>
 
+        <div class="cuotas"></div>
         <div class="fondo-nike"></div>
     </main>
     <footer class="pie-pagina">
