--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
         <ul>
             <p>AYUDA</p>
             <li>
-                <span>Contactenos <a href="./pages/contactos.html" target="_blank">
+                <span>Contactenos <a href="./pages/contactos.html">
                     <img src="./assets/img/icon/ayuda.png" alt="">
                 </a>
             </li>
