--- a/pages/accesorios.html
+++ b/pages/accesorios.html
@@ -195,17 +195,17 @@
             <ul>
                 <p>REDES SOCIALES</p>
                 <li>
-                    <a href="https://www.youtube.com/">
+                    <a href="https://www.youtube.com/" target="_blank">
                         <img src="../assets/img/icon/youtube.png" alt="">
                     </a>
                 </li>
                 <li>
-                    <a href="https://www.instagram.com/">
+                    <a href="https://www.instagram.com/" target="_blank">
                         <img src="../assets/img/icon/instagram.png" alt="">
                     </a>
                 </li>
                 <li>
-                    <a href="https://www.facebook.com/">
+                    <a href="https://www.facebook.com/" target="_blank">
                         <img src="../assets/img/icon/facebook.png" alt="">
                     </a>
                 </li>
